add last details

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                         <li>HTML 5</li>
                         <li>CSS 3</li>
                         <li>JavaScript</li>
+                        <li>React</li>
                         <li>Firebase</li>
                         <li>NodeJS</li>
                         <li>Github</li>
