--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="about-me">
                   <p class="subtitle">Sobre mí </p>
                   <p class="designTipografy">
-                    Soy Front-End Developer Junior, me considero una apasionada de la tecnología ya que disfruto de crear y proponer soluciones de acuerdo con la naturaleza de la organización.
+                    Soy Front-End Developer, me considero una apasionada de la tecnología ya que disfruto de crear y proponer soluciones de acuerdo con la naturaleza de la organización.
                     Desde muy pequeña me atrajo la tecnología, es por ello que decidí ingresar a LABORATORIA, lo cual me permitió desarrollarme en el área de Tecnología.
                 </p>    
             </div>
@@ -97,9 +97,10 @@
 
               <div class="educacion">
                   <p class="subtitle">Educación </p>
-                  <p class="designTipografy">                  
-                    <span class="bold"> (May 2021 a la actualidad)</span><br>
-                    Carrera: Front-End Development <br> 
+                  <p class="designTipografy">  
+                                      
+                    <span class="bold"> LABORATORIA (May 2021 a la actualidad)</span><br>
+                    Carrera: Front-End Developer <br> 
                     <span class="bold">Latinas Code Camp (Dic 2020 a Fep 2021) </span><br>
                     Carrera: Front-End Development<br>
                     <span class="bold">I.E. PNP "SANTA ROSA DE LIMA" (Promoción 2020)</span>
