add in EXPERIENCIA DE FORMACION the project burger queen

--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@
             <div class="Habilidades-Técnicas">
                   <p class="subtitle">EXPERIENCIA DE FORMACION</p>
                     <p class="designTipografy">
+                        <span class="project">Burguer Queen:</span><br>
+                        Un pequeño restaurante de hamburguesas, que está creciendo, necesita una interfaz en la que puedan tomar pedidos usando una tablet, y enviarlos a la cocina para que se preparen ordenada y eficientemente 
+                        <br>
+                        <span class="descriptionTec">Tecnologias utilizadas:</span> React, Bootstrap, Firebase
+                    </p>  
+                    <p class="designTipografy">
                         <span class="project">Social Network (CourseShare):</span><br>
                         Es una red social que los usuarios registrados pueden visualizar los posts de otros miembros, incluida una sección sobre post destacados, además pueden realizar publicaciones, editarlos y eliminarlos y buscar algún miembro en específico. El usuario puede asignar a sus publicaciones el modo público o privado y dar like a sus publicaciones favoritas.
                         <br>
